2002-09-26  Roland McGrath  <roland@redhat.com>

	* stdlib/longlong.h: Replaced with current version from GCC mainline,
	last modified 2002-09-22  Kazu Hirata  <kazu@cs.umass.edu>.

2002-09-25  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/mips/syscalls.list: Add syscall_exit.
	Patch by Guido Guenther <agx@sigxcpu.org>.

2002-09-25  Roland McGrath  <roland@redhat.com>

	* Makeconfig (%.v.i pattern rule): Use $(CPPFLAGS).

2002-09-24  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/configure.in: Recognize nptl add-on name.

2002-09-24  Roland McGrath  <roland@redhat.com>

	* sysdeps/mach/hurd/Versions (ld: GLIBC_2.0): Move __libc_read,
	__libc_write, __libc_lseek64, to ...
	(ld: GLIBC_PRIVATE): ... here.

	* csu/Versions: Use %include <tls.h> to get USE_TLS defined.
	(libc: GLIBC_2.0) [USE_TLS && HAVE___THREAD]: Remove _errno, errno.
	(libc: GLIBC_2.3) [USE_TLS && HAVE___THREAD]: Put errno here instead.
	* resolv/Versions: Use %include <tls.h> to get USE_TLS defined.
	(libc: GLIBC_2.0) [USE_TLS && HAVE___THREAD]: Remove _h_errno, h_errno,
	and _res.
	(libc: GLIBC_2.3) [USE_TLS && HAVE___THREAD]: Put h_errno, _res here.

	* elf/tls-macros.h [__x86_64__] (TLS_LE, TLS_IE, TLS_LD, TLS_GD):
	New macros for x86-64.

	* sysdeps/unix/sysv/linux/alpha/bits/time.h: File removed.
	It was indentical to the linux/bits/time.h file.

	* nscd/nscd_gethst_r.c (nscd_gethst_r): Add a cast to silence warning.

	* resolv/gethnamaddr.c (gethostbyaddr): Use socklen_t for SIZE.

2002-09-23  Ulrich Drepper  <drepper@redhat.com>

	* po/zh_CN.po: New file.

2002-09-23  Roland McGrath  <roland@redhat.com>

	* posix/unistd.h: Test [__USE_UNIX98] instead of [__USE_OPEN2K]
	for gethostname declaration.

	* catgets/open_catalog.c (__open_catalog): Don't use a value type
	as the __builtin_expect expression, just the Boolean value.

	* sysdeps/generic/wordexp.c (parse_glob): int -> size_t for counter.
	* sysdeps/unix/sysv/linux/opensock.c (__opensock): Likewise.